--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <title>SASS 7-1 Structure Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
-      // Minimal Tailwind CSS configuration to potentially help CDN initialization
+      // Configuración mínima de Tailwind CSS para ayudar potencialmente a la inicialización de CDN.
       tailwind.config = {}
     </script>
     <style>
-      /* For a slightly nicer scrollbar on dark themes */
+      /* Para una barra de desplazamiento un poco más agradable en temas oscuros. */
       ::-webkit-scrollbar {
         width: 8px;
         height: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #1e293b; /* slate-800 */
+        background: #1e293b; /* pizarra-800 */
       }
       ::-webkit-scrollbar-thumb {
-        background: #475569; /* slate-600 */
+        background: #475569; /* pizarra-600 */
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #64748b; /* slate-500 */
+        background: #64748b; /* pizarrra-500 */
       }
     </style>
-  <!-- Import map removed as Vite will handle dependencies from node_modules -->
+  <!-- Mapa de importación eliminado ya que Vite manejará las dependencias de node_modules. -->
 <script type="importmap">
 {
   "imports": {
